5.9.0 2026xxxx
??: Facelift: Status / Index / Templates
??: Review: Optimization and corrections

5.8.0 2025xxxx
??: Windows: Update of service-32.exe / service-64.exe (prunsrv.exe 1.4.x)
??: Documentation: Update for Unix and Linux
??: Service: devwex start [directory] (read all ini files from directory)

5.7.0 2024xxxx
??: Automation (build, test, release) via GitHub actions
BF: Unix/Linux: Correction of the missing second start parameter in the bash script
BF: Windows: Correction of the missing second start parameter in the batch script
CR: Unix/Linux: Optimization of bash scripts and runtime directory handling
    - Optimization of JRE determination in the runtime directory
      The Directory name does not matter, it is searched for files ./java,
      ./jre/bin/java and ./bin/java.
    - Optimization when including the runtime sub-directories
      The runtime directories and, if available, the bin subdirectory are added
      to the PATH variable.
    - Change of the automatic runtime-script integration
      The ./runtime/scripts directory is omitted, the *.sh files are searched
      in the root of the ./runtime directory.
CR: Windows: Optimization of batch scripts and runtime directory handling
    - Optimization of JRE determination in the runtime directory
      The Directory name does not matter, it is searched for files .\java.exe,
      .\jre\bin\java.exe and .\bin\java.exe.
    - Optimization when including the runtime sub-directories
      The runtime directories and, if available, the bin subdirectory are added
      to the PATH variable.
    - Change of the automatic runtime-script integration
      The .\runtime\scripts directory is omitted, the *.bat and *.cmd files are
      searched in the root of the .\runtime directory.
CR: HTTP(S): Optimization of the composition of the UNIQUE_ID
CR: Documentation: Switch to Markdown
    TODO: architectural image

5.6.0 20231227
BF: Review: Optimization and corrections